NOJIRA updated MAVEN_OPTS in scripts to suggested values from wiki
git-svn-id: https://opencast.jira.com/svn/MH/trunk@6664 e6edf6fb-f266-4316-afb4-e53d95876a76